# xiaomi-miloco

./: .gitignore  AGENTS.md  CONTRIBUTING.md  MANIFEST.in  PET_PROMPT_FORCE_TEST.md  README.md  README.zh.md  README.zh_Hans.md  README_zh_Hans.md  ha_client.py  miloco.sh  pyproject.toml  setup.py  user_guide_zh.md
backend/miloco/: pyproject.toml
backend/miloco/src/miloco/: main.py  manager.py
backend/miloco/tests/: conftest.py  test_action_ledger.py  test_automation_router.py  test_automation_service.py  test_automation_translations.py  test_cleanup_loop_integration.py  test_connector_schema_migration.py  test_connector_wal_pragmas.py  test_cross_end_alignment.py  test_event_text_builder.py  test_events_service.py  test_events_sse.py  test_feedback_pack.py  test_meaningful_events_integration.py  test_media_resolution.py  test_meta_subscriptions.py  test_miot_filter_and_cameras.py  test_miot_proxy_lifecycle.py  test_miot_refresh_errors.py  test_perception_client.py  test_perception_client_rule_dispatch.py  test_perception_rule_e2e.py  test_persist_meaningful_event.py  test_person_router_avatar.py  test_person_router_cascade.py  test_person_router_sample_name_meta.py  test_person_router_samples_batch.py  test_pet_observe.py  test_pet_router.py  test_result_codes.py  test_rtsp_record_clip.py  test_rtsp_registry_migration.py  test_rule.py  test_rule_repo_sqlite.py  test_schedule_repo.py  test_schedule_router.py  test_schedule_runner.py  test_settings.py  test_snapshot_writer.py  test_task_record_router.py  (+7 more)
backend/miloco/tests/admin/: test_features.py  test_omni_config.py  test_omni_config_capabilities.py  test_omni_config_preflight.py  test_perception_config_dispatch.py  test_scheduler_config.py  test_upgrade_endpoint.py
backend/miot/: decoder.py  pyproject.toml
backend/miot/tests/: test_client_meta_sub.py  test_cloud.py  test_lan.py  test_mips_cloud.py  test_units.py
plugins/hermes/: README.md  UPGRADE.md  __init__.py  agent_runner.py  bridge.py  catalog.py  config.py  config.template.json  cron_sync.py  hooks.py  install-guide.md  install-hermes.sh  personality.md  plugin.yaml  pyproject.toml  schemas.py  skills_loader.py  suggestions.py  tools.py  trace.py
plugins/hermes-mcp/: .env.example  DEPLOY.md  README.md  pyproject.toml
plugins/hermes/adapter/: hermes_client.py
plugins/hermes/dashboard/: api.py
plugins/hermes/integration-test/: Dockerfile.hermes  docker-compose.yml  run_test.py
plugins/hermes/miloco-plugin/: __init__.py  catalog.py  context_injection.py  cron_setup.py  paths.py  plugin.yaml  tools_habit.py  tools_notify.py  tools_status.py  trace.py
plugins/hermes/scripts/: adapter-launcher.sh  miloco-adapter.sh  miloco-bridge.py  miloco-catalog.py  miloco-habit-tool.py  miloco-notify.py  miloco-service.py  miloco-status.sh  miloco.sh  read_python_bin.py  sync-skills.py  sync_skills.py  write_python_bin.py  write_state_json.py
plugins/hermes/tests/: conftest.py  install-test-local.md  test_acceptance.sh  test_acceptance.sh.bak  test_agent_runner.py  test_author_fix_regression.py  test_bridge.py  test_catalog.py  test_config.py  test_context_injection.py  test_cron_setup_reconcile.py  test_cron_sync.py  test_dashboard_api.py  test_e2e_business.sh  test_e2e_full.sh  test_e2e_real.sh  test_guide_playbook.py  test_habit.py  test_hermes_adapter.py  test_hermes_api_contract.py  test_hooks.py  test_integration.py  test_launchd.py  test_miloco_notify_wrapper.py  test_paths.py  test_real_hermes_contracts.py  test_scaffold.py  test_schemas.py  test_skills_loader.py  test_suggestions.py  test_three_issues.py  test_tools.py  test_tools_notify.py  test_tools_status.py  test_trace.py
(+633 files in other folders)
