[project]
name = "miloco-mcp-server"
version = "0.1.0"
description = "MCP Server for Xiaomi Miloco — wraps Miloco REST API into MCP tools for Hermes Agent"
readme = "README.md"

requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Miloco Community"}]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.8",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/miloco_mcp"]
